Prevent room from wrapping to other side of grid when width exceeds available space.

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+html {
+  background-color: black;
+}
+
 html body #root .App {
-  height: 100%;
-  width: 100%;
+  background-color: black;
 }
 
 table {
@@ -8,11 +11,16 @@ table {
 }
 
 .cell {
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   height: 10px;
   width: 10px;
 }
 
+.wall {
+  background-color: gray;
+}
+
 .room {
-  background-color: red;
+  background-color: white;
+  opacity: 1;
 }
